--- a/AdoteAqui.css
+++ b/AdoteAqui.css
@@ -6,7 +6,8 @@ p {
     padding: 0px;
     list-style: none;
     font-size: 1.2rem;
-    font-family: Arial;
+    font-family: 'Pacifico';
+
 
 }
 
@@ -14,17 +15,10 @@ bory {
     margin-bottom: 100px;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-    font-size: 30px;
-    background-color: #C5AFA4 0.8;
-
-}
-
-h1 {
-    text-align: center;
-    margin-top: 100px;
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #A1CDF1;
 }
 
 header {
@@ -49,11 +43,32 @@ header {
     padding: 5px;
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    background-color: #A1CDF1;
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 30px;
+    background-color: #C5AFA4 0.8;
+    font-family: 'Pacifico';
+
 }
+
+h1 {
+    text-align: center;
+    margin-top: 100px;
+    font-family: 'Pacifico';
+
+}
+
+.inicio p {
+    text-align: center;
+    padding: 20px;
+    background:  #78E0DC
+}
+
+
+
+
+
 
 .Gatinho {
     display: flex;
